<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBackgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.RunSummaryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/delete_settings_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/delete_settings_message" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/delete_settings_question" />

        <Button
            android:id="@+id/deleteDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:background="@color/MSOrange"
            android:text="@string/delete_settings_button"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</RelativeLayout>