<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBackgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.RunSummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/logout_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/logout_message" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/logout_question" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:background="@color/MSOrange"
            android:text="@string/logout_button"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/logoutError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="An error has occurred" />
    </LinearLayout>
</RelativeLayout>