<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#71BCFA"
        android:padding="6dip" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.12"
            android:text="@string/service_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="28dp"
            android:layout_height="28dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#71BCFA"
        android:padding="6dip"  >

        <ProgressBar
            android:id="@+id/createCryptoProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:onClick="startClick"
            android:text="@string/start_button_text" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pauseClick"
            android:text="@string/pause_button_text" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="stopClick"
            android:text="@string/stop_button_text" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gpsData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewRun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        tools:listitem="@layout/row_list_run">

    </ListView>

</LinearLayout>